<resources>
    <string name="app_name">Kalkyu</string>
    <string name="length">LENGTH</string>
    <string name="weight">WEIGHT</string>
    <string name="volume">VOLUME</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="calculator">CALCULATOR</string>
    <string name="time">TIME</string>
    <string name="kalkyu_logo">kalkyu_logo</string>
    <string name="formula"></string>
    <string name="convert"></string>
    <string name="equal"></string>
    <string-array name="Speed_Unit">
        <item>Miles per hour</item>
        <item>Feet per second</item>
        <item>Meters per second</item>
        <item>Kilometers per hour</item>
        <item>Knot</item>
    </string-array>
    <string-array name="Time_Unit">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
    </string-array>
    <string-array name="Length_Unit">
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Nautical Mile</item>
    </string-array>
    <string-array name="Weight_Unit">
        <item>Milligram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Metric Ton</item>
        <item>Ounce</item>
        <item>Pound</item>
    </string-array>
    <string-array name="Volume_Unit">
        <item>Milliliter</item>
        <item>Liter</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Gallon</item>
        <item>Quart</item>
        <item>Cubic Meter</item>
        <item>Cubic Feet</item>
    </string-array>
</resources>